--- a/client_code/widgets/markdown/form_template.yaml
+++ b/client_code/widgets/markdown/form_template.yaml
@@ -1,7 +1,9 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{"FBMGLX":55,"TXIVYR":5,"LKFVMK":10,"GMLBJS":50}'}
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"FBMGLX":55,"TXIVYR":5,"LKFVMK":10,"GMLBJS":50}',
+    spacing_below: small, background: ''}
 components:
 - type: Spacer
   properties: {height: 32}
@@ -15,6 +17,13 @@ components:
   name: label_id
   layout_properties: {grid_position: 'TNEMXH,TXIVYR'}
   event_bindings: {}
+- type: TextBox
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+    border: '', enabled: true, foreground: '', visible: false, text: '', font_size: null,
+    font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
+  name: text_box_title
+  layout_properties: {grid_position: 'BSDGIS,GWWJNX'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
     visible: true, text: 'text:', font_size: 14, font: '', spacing_above: small, icon_align: left,
