--- a/client_code/user_widgets/markdown/form_template.yaml
+++ b/client_code/user_widgets/markdown/form_template.yaml
@@ -3,6 +3,13 @@ container:
   event_bindings: {}
   properties: {col_widths: '{}'}
 components:
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: false,
+    text: '', font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: label_title
+  layout_properties: {grid_position: 'BPJXCD,WRQBPB'}
+  event_bindings: {}
 - type: form:user_widgets.html_display
   properties: {}
   name: html_display
