--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -15,4 +15,50 @@ components:
   name: label_id
   layout_properties: {grid_position: 'RCNYSH,TCJCCQ'}
   event_bindings: {}
+- type: GridPanel
+  properties: {}
+  name: grid_panel_1
+  layout_properties: {grid_position: 'HCIZAG,HPGDGZ'}
+  components:
+  - type: Button
+    properties: {text: primary_color_1, role: primary-color}
+    name: primary_color_1
+    layout_properties: {grid_position: 'OWXLMB,VYQCIX', row: AYQSWC, width_xs: 1,
+      col_xs: 0}
+  - type: Button
+    properties: {text: primary_color_3, role: primary-color}
+    name: primary_color_3
+    layout_properties: {row: AYQSWC, width_xs: 1, col_xs: 1}
+  - type: Button
+    properties: {text: primary_color_4, role: primary-color}
+    name: primary_color_4
+    layout_properties: {row: AYQSWC, width_xs: 1, col_xs: 2}
+  - type: Button
+    properties: {text: primary_color_5, role: primary-color}
+    name: primary_color_5
+    layout_properties: {row: AYQSWC, width_xs: 1, col_xs: 3}
+  - type: Button
+    properties: {text: primary_color_2, role: primary-color}
+    name: primary_color_2
+    layout_properties: {row: AYQSWC, width_xs: 1, col_xs: 4}
+  - type: Button
+    properties: {text: primary_color_6, role: primary-color}
+    name: primary_color_6
+    layout_properties: {row: MLNZHE, width_xs: 1, col_xs: 0}
+  - type: Button
+    properties: {text: primary_color_7, role: primary-color}
+    name: primary_color_7
+    layout_properties: {row: MLNZHE, width_xs: 1, col_xs: 1}
+  - type: Button
+    properties: {text: primary_color_8, role: primary-color}
+    name: primary_color_8
+    layout_properties: {row: MLNZHE, width_xs: 1, col_xs: 2}
+  - type: Button
+    properties: {text: primary_color_9, role: primary-color}
+    name: primary_color_9
+    layout_properties: {row: MLNZHE, width_xs: 1, col_xs: 3}
+  - type: Button
+    properties: {text: primary_color_10, role: primary-color}
+    name: primary_color_10
+    layout_properties: {row: MLNZHE, width_xs: 1, col_xs: 4}
 is_package: true
